fix inline nav alignment

--- a/src/nav/css.styl
+++ b/src/nav/css.styl
@@ -48,10 +48,10 @@
     & > a
       width auto
       flex-direction row
-      align-items unset
       justify-content center
-      //margin-right var(--item-margin, 2em)
+
       & > svg
         height var(--icon-size, 1em)
         width var(--icon-size, 1em)
         margin-right var(--icon-margin, 0.5em)
+        margin-bottom unset
